tests/paczka1/fuzzy1/28763598.err
Error in line 5: 9ELeRFTt3 A234 29,2
Error in line 7: LaI A515 70,0
Error in line 28: gVtVFz8XR A515 93,1
